tests/src/frontend/typechecking/invalid/tunder_inheritance_4.sk
base class Foo {
  overridable fun hello(): _ {
    invariant_violation("")
  }
}

class Bar() extends Foo {
  fun hello(): Int {
    42
  }
}
